{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 12,
  "lineage": "29338376-ea8b-fdeb-4bdf-e916fecb3abd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174271431886:internet-gateway/igw-031f67af19c128ea0",
            "id": "igw-031f67af19c128ea0",
            "owner_id": "174271431886",
            "vpc_id": "vpc-0ffb44685a346e61f"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-031f67af19c128ea0",
            "id": "r-rtb-08f172173210f29561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f172173210f2956",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.internetgateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "accessgroups",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174271431886:security-group/sg-08c49039093404725",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08c49039093404725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allowinbound",
            "name_prefix": "",
            "owner_id": "174271431886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS-Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffb44685a346e61f"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174271431886:subnet/subnet-01dba05337d484c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "132.0.0.0/24",
            "id": "subnet-01dba05337d484c47",
            "map_public_ip_on_launch": true,
            "owner_id": "174271431886",
            "tags": {
              "Name": "My Subnet"
            },
            "vpc_id": "vpc-0ffb44685a346e61f"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174271431886:subnet/subnet-0c9aa6714627a1214",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "132.0.1.0/24",
            "id": "subnet-0c9aa6714627a1214",
            "map_public_ip_on_launch": true,
            "owner_id": "174271431886",
            "tags": {
              "Name": "My Subnet"
            },
            "vpc_id": "vpc-0ffb44685a346e61f"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:174271431886:vpc/vpc-0ffb44685a346e61f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "132.0.0.0/16",
            "default_network_acl_id": "acl-08ac7fa02b6aacad8",
            "default_route_table_id": "rtb-08f172173210f2956",
            "default_security_group_id": "sg-0ef7900179810dc5e",
            "dhcp_options_id": "dopt-19907363",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ffb44685a346e61f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f172173210f2956",
            "owner_id": "174271431886",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}